--- a/Build_v6/css/main.css
+++ b/Build_v6/css/main.css
@@ -918,20 +918,23 @@ input[type="radio"], input[type="checkbox"] {
   font-size: 16px; }
 
 /* ____NAVIGATION DROPDOWN MENU_____*/
-.rts-overlay {
+.rts-overlay, .submenu-overlay {
   position: fixed;
   top: 0;
   right: 0;
   bottom: 0;
   left: 0;
   visibility: hidden; }
-  .rts-overlay.is-visible {
+  .rts-overlay.is-visible, .submenu-overlay.is-visible {
     visibility: visible;
     background: rgba(81, 81, 81, 0.35);
     transition: background .3s 0s,-webkit-transform .3s 0s;
     -webkit-transition: background .3s 0s,-webkit-transform .3s 0s;
     transition: background .3s 0s,transform .3s 0s;
     transition: background .3s 0s,transform .3s 0s,-webkit-transform .3s 0s; }
+
+.submenu-overlay {
+  top: 93px; }
 
 .prime-nav {
   padding: 0 0 0 50px; }
@@ -4115,7 +4118,15 @@ input[type="radio"], input[type="checkbox"] {
     .cc-content {
       margin-top: 92px; }
       .cc-content .summary-wrapper {
-        display: none; } }
+        position: fixed;
+        background-color: white;
+        top: 93px;
+        left: 0;
+        width: 100%;
+        z-index: 9999; }
+        .cc-content .summary-wrapper .summary-container {
+          padding: 0;
+          margin-bottom: 0; } }
   .cc-content .chkout-wrapper {
     width: 1000px;
     margin: 0 auto; }
@@ -4138,7 +4149,23 @@ input[type="radio"], input[type="checkbox"] {
         padding-left: 34%; } }
     @media screen and (max-width: 767px) {
       .cc-content .page-title {
-        display: none; } }
+        display: block;
+        position: fixed;
+        top: 50px;
+        left: 0;
+        padding: 8px 6.6%;
+        width: 100%;
+        background-color: white;
+        border-top: 1px solid #EAE9E9;
+        border-bottom: 1px solid #EAE9E9;
+        font-family: "basisgrot-med", Helvetica, sans-serif;
+        font-size: 15px; }
+        .cc-content .page-title:after {
+          content: ' ';
+          background: url(../css/images/icons/icon-dropdown.svg) 13px 2px/11px 11px no-repeat;
+          width: 28px;
+          height: 12px;
+          display: inline-block; } }
   @media screen and (min-width: 768px) {
     .cc-content .chkout-wrapper {
       flex-flow: row nowrap; }
@@ -4164,6 +4191,11 @@ input[type="radio"], input[type="checkbox"] {
   font-size: 15px;
   margin-bottom: 14px;
   display: block; }
+  @media screen and (max-width: 767px) {
+    .submenu {
+      border-bottom: 1px solid #EAE9E9;
+      margin: 0;
+      padding: 12px 6.6%; } }
 
 .cc-section .step-body, .cc-half-section .step-body {
   padding: 9px 48px; }
@@ -4185,14 +4217,15 @@ input[type="radio"], input[type="checkbox"] {
 .cc-question {
   padding: 11px 0;
   font-size: 13px;
-  font-family: "basisgrot-med", Helvetica, sans-serif; }
+  font-family: "basisgrot-med", Helvetica, sans-serif;
+  cursor: pointer; }
   .cc-question .icon-more {
     float: right;
     margin-top: 4px;
     margin-right: 3px; }
 
 .cc-answer {
-  /*display: none;*/
+  display: none;
   margin: 4px 0 18px; }
 
 /*-----------------------------*/
@@ -4252,22 +4285,6 @@ input[type="radio"], input[type="checkbox"] {
       margin-top: 12px; }
   .cc-form .button-wrapper {
     margin: 40px 0; }
-
-.mob-subnav {
-  display: none; }
-  @media screen and (max-width: 767px) {
-    .mob-subnav {
-      display: block;
-      position: fixed;
-      top: 50px;
-      padding: 0 6.6%;
-      width: 100%;
-      background-color: white;
-      border-top: 1px solid #EAE9E9;
-      border-bottom: 1px solid #EAE9E9; }
-      .mob-subnav .subnav-select {
-        width: 100%;
-        border: none; } }
 
 /*-----------------------------*/
 /* $Designers Page
@@ -4387,6 +4404,9 @@ input[type="radio"], input[type="checkbox"] {
  */
 .hidden {
   display: none !important; }
+
+.hide {
+  display: none; }
 
 .show {
   display: block; }
