--- a/Build_v6/css/main.scss
+++ b/Build_v6/css/main.scss
@@ -1298,7 +1298,7 @@ input[type="radio"], input[type="checkbox"] {
 
 
 /* ____NAVIGATION DROPDOWN MENU_____*/
-.rts-overlay {
+.rts-overlay, .submenu-overlay {
     position: fixed;
     top: 0;
     right: 0;
@@ -1314,6 +1314,10 @@ input[type="radio"], input[type="checkbox"] {
         transition: background .3s 0s,transform .3s 0s;
         transition: background .3s 0s,transform .3s 0s,-webkit-transform .3s 0s;
     }
+}
+
+.submenu-overlay {
+    top: 93px;
 }
 
 .prime-nav {
@@ -5818,8 +5822,19 @@ input[type="radio"], input[type="checkbox"] {
 
     @include until($mobile) {
         margin-top: 92px;
+
         .summary-wrapper {
-            display: none;
+            position: fixed;
+            background-color: white;
+            top: 93px;
+            left: 0;
+            width: 100%;
+            z-index: 9999;
+
+            .summary-container {
+                padding: 0;
+                margin-bottom: 0;
+            }
         }
     }
 
@@ -5850,7 +5865,25 @@ input[type="radio"], input[type="checkbox"] {
         }
 
         @include until($mobile) {
-            display: none;
+            display: block;
+            position: fixed;
+            top: 50px;
+            left: 0;
+            padding: 8px 6.6%;
+            width: 100%;
+            background-color: white;
+            border-top: 1px solid $lgt-grey;
+            border-bottom: 1px solid $lgt-grey;
+            font-family: $sans-med;
+            font-size: 15px;   
+
+            &:after {
+                content: ' ';
+                background: $dropdown 13px 2px/11px 11px no-repeat;
+                width: 28px;
+                height: 12px;
+                display: inline-block;
+            } 
         }
     }
 
@@ -5893,6 +5926,12 @@ input[type="radio"], input[type="checkbox"] {
     font-size: 15px;
     margin-bottom: 14px;
     display: block;
+
+    @include until($mobile) {
+        border-bottom: 1px solid $lgt-grey;
+        margin: 0;
+        padding: 12px 6.6%;
+    }
 }
 
 .cc-section {
@@ -5928,6 +5967,7 @@ input[type="radio"], input[type="checkbox"] {
     padding: 11px 0;
     font-size: 13px;
     font-family: $sans-med;
+    cursor: pointer;
 
     .icon-more {
         float: right;
@@ -5937,7 +5977,7 @@ input[type="radio"], input[type="checkbox"] {
 }
 
 .cc-answer {
-    /*display: none;*/
+    display: none;
     margin: 4px 0 18px;
 }
 
@@ -6028,26 +6068,6 @@ input[type="radio"], input[type="checkbox"] {
 
     .button-wrapper {
         margin: 40px 0;
-    }
-}
-
-.mob-subnav {
-    display: none;
-
-    @include until($mobile) {
-        display: block;
-        position: fixed;
-        top: 50px;
-        padding: 0 6.6%;
-        width: 100%;
-        background-color: white;
-        border-top: 1px solid $lgt-grey;
-        border-bottom: 1px solid $lgt-grey;
-
-        .subnav-select {
-            width: 100%;
-            border: none;
-        }
     }
 }
 
@@ -6228,6 +6248,10 @@ input[type="radio"], input[type="checkbox"] {
 
 .hidden {
     display: none !important;
+}
+
+.hide {
+    display: none;
 }
 
 .show {
